[package]
name = "dwarf-error"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = [
  # "rt-multi-thread",
  "rt",
  "parking_lot",
  "process",
  "sync",
  "time",
] }

[profile.release]
codegen-units = 1
debug = true
lto = true
